K8S_injector_demo/injector_mgmt/deployment/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: cyberark-sidecar-injector
  labels:
    app: cyberark-sidecar-injector
webhooks:
  - name: sidecar-injector.cyberark.com
    clientConfig:
      service:
        name: cyberark-sidecar-injector
        namespace: injectors
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNU1UQXhOREF3TVRnME5Gb1hEVEk1TVRBeE1UQXdNVGcwTkZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTllLCmNBSEkzeE50QmZMNzIrOWtuZW01TmROL2tSSjNJRDh1SzBtTE1PVlJnVURCeG5ya1JDOExDK1BLMStyUHhzNWsKenJ2b1lDbWFDU0NyTmpCeEJvTUt5UGJmRTR6aGlXVm5QZVFPMTBNZy9tRVFyWlFqaUg5Z0VOVnFXSEx5QlRCVwovS0FxTHlZUllF [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        cyberark-sidecar-injector: enabled
